--- a/index.html
+++ b/index.html
@@ -759,5 +759,5 @@
                         ${item.image}
                     </div>
                     <div class="p-6">
-                        <div class="flex justify-between items-start mb-2">commit message:add sambel bakar ziizee website
-                            <h3 class="text-xl font-bold text-red-400">${item.name}<
+                        <div class="flex justify-between items-start mb-2">commit message :
+                            <h3 class="text-xl font-bold text-red-400">${item.name}<"add sambel bakar ziizee website"
